# Ajuna

./: .dockerignore  .gitignore  .taplo.toml  Cargo.toml  HEADER-AGPL  README.md  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: .codecov.yml  pull_request_template.md
.maintain/: frame-weight-template.hbs  inspect_pallet_account.sh  weights.sh  zombienet-config.toml  zombienet-tests.zndsl
.onf/: bajun-rococo-testnet.yml
ajuna-common/: Cargo.toml
ajuna-common/src/: lib.rs
ajuna-common/src/mocks/: matchmaker.rs  mod.rs  runner.rs
ajuna-test/: Cargo.toml
ajuna-test/src/: ajuna_node.rs  constants.rs  lib.rs  sidechain.rs  traits.rs
ci/: Dockerfile.node  Dockerfile.worker  e2e-compose.yml.base  e2e-tests.sh
docker/: Dockerfile  Dockerfile.parachain  Dockerfile.solochain  (+3 more)
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli/src/: benchmarking.rs  cli.rs  command.rs  command_helper.rs  lib.rs
node/cli/src/command/: ajuna.rs  bajun.rs  mod.rs  solo.rs
node/cli/src/para/: cli.rs  command.rs  mod.rs
node/cli/src/solo/: benchmarking.rs  cli.rs  command.rs  mod.rs
node/service/: Cargo.toml
node/service/res/: testnet.json
node/service/src/: ajuna.rs  bajun.rs  lib.rs  para.rs  para_ajuna.rs  para_bajun.rs  rococo.rs  solo.rs
node/service/src/chain_spec/: ajuna.rs  bajun.rs  mod.rs  rococo.rs  solo.rs
node/service/src/para/: ajuna.rs  bajun.rs  mod.rs
node/src/: ajuna.rs  ajuna_para.rs  bajun_para.rs  rococo.rs  solo.rs
pallets/ajuna-awesome-avatars/: CHANGELOG.md  Cargo.toml  README.md
pallets/ajuna-awesome-avatars/benchmarking/: Cargo.toml
pallets/ajuna-awesome-avatars/benchmarking/src/: lib.rs  mock.rs
pallets/ajuna-awesome-avatars/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  season.rs  tests.rs  types.rs  weights.rs
pallets/ajuna-awesome-avatars/src/migration/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs
pallets/ajuna-awesome-avatars/src/types/: account.rs  avatar.rs  avatar_codec.rs  config.rs  fee.rs  mod.rs  rarity_tier.rs  season.rs
pallets/ajuna-awesome-avatars/src/types/avatar/: avatar_codec.rs  force.rs  mod.rs  nft.rs  rarity_tier.rs
pallets/ajuna-awesome-avatars/src/types/avatar/tools/: mod.rs  v1.rs
pallets/ajuna-awesome-avatars/src/types/avatar/tools/v2/: avatar_utils.rs  constants.rs  mod.rs  mutator.rs  slot_roller.rs  test_utils.rs  types.rs
pallets/ajuna-awesome-avatars/src/types/avatar/tools/v2/combinator/: assemble.rs  breed.rs  build.rs  equip.rs  feed.rs  glimmer.rs  mate.rs  mod.rs  spark.rs  stack.rs  tinker.rs
pallets/ajuna-awesome-avatars/src/types/avatar/version/: mod.rs
pallets/ajuna-awesome-avatars/src/types/avatar/version/v1/: mod.rs
pallets/ajuna-awesome-avatars/src/types/avatar/version/v2/: mod.rs
pallets/ajuna-awesome-avatars/src/types/avatar/version/v2/types/: mod.rs  pet.rs
pallets/ajuna-awesome-avatars/src/types/avatar/versions/: mod.rs  v1.rs
pallets/ajuna-awesome-avatars/src/types/avatar/versions/v2/: avatar_utils.rs  constants.rs  mod.rs  mutator.rs  slot_roller.rs  test_utils.rs  types.rs
pallets/ajuna-awesome-avatars/src/types/avatar/versions/v2/combinator/: assemble.rs  breed.rs  build.rs  equip.rs  feed.rs  flask.rs  glimmer.rs  mate.rs  mod.rs  spark.rs  stack.rs  statue.rs  tinker.rs
pallets/ajuna-battle-mogs/: Cargo.toml
pallets/ajuna-battle-mogs/src/: algorithm.rs  benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/ajuna-battle-mogs/src/migration/: mod.rs
pallets/ajuna-board/: Cargo.toml  README.md
pallets/ajuna-board/src/: benchmarking.rs  dot4gravity.rs  guessing.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/ajuna-connectfour/: Cargo.toml  README.md
pallets/ajuna-connectfour/src/: benchmarking.rs  connectfour.rs  lib.rs  mock.rs  tests.rs
pallets/ajuna-gameregistry/: Cargo.toml  README.md
pallets/ajuna-gameregistry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/ajuna-matchmaker/: Cargo.toml  README.md
pallets/ajuna-matchmaker/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/ajuna-nft-staking/: Cargo.toml
pallets/ajuna-nft-staking/benchmarking/: Cargo.toml
pallets/ajuna-nft-staking/benchmarking/src/: lib.rs  mock.rs
pallets/ajuna-nft-staking/src/: benchmarking.rs  contracts.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/ajuna-nft-staking/src/tests/: mock.rs  mod.rs
pallets/ajuna-nft-staking/src/tests/ext/: accept.rs  cancel.rs  claim.rs  create.rs  mod.rs  remove.rs  set_contract_collection_id.rs  set_creator.rs  set_global_config.rs  snipe.rs
pallets/ajuna-nft-transfer/: Cargo.toml  README.md
pallets/ajuna-nft-transfer/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/ajuna-runner/: Cargo.toml  README.md
pallets/ajuna-runner/src/: lib.rs  mock.rs  tests.rs
pallets/ajuna-wildcard/: Cargo.toml
pallets/ajuna-wildcard/src/: asset.rs  lib.rs
pallets/ajuna-wildcard/src/tests/: mock.rs  mod.rs
pallets/ajuna-wildcard/src/tests/ext/: challenge.rs  deposit.rs  end2end.rs  freeze.rs  mod.rs  propagate_freeze.rs  refund_frozen.rs  respond_challenge.rs  respond_zero_challenge.rs  withdraw.rs  withdraw_frozen.rs
pallets/nft-transfer/: Cargo.toml
pallets/nft-transfer/src/: lib.rs  mock.rs  tests.rs  traits.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/bajun/: Cargo.toml  build.rs
runtime/bajun/src/: lib.rs  migrations_fix.rs  proxy_type.rs  tests.rs  xcm_config.rs
runtime/bajun/src/weights/: block_weights.rs  cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  pallet_balances.rs  pallet_collator_selection.rs  pallet_collective.rs  pallet_identity.rs  pallet_membership.rs  pallet_multisig.rs  pallet_nfts.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_session.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_uniques.rs  pallet_utility.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/solo/: Cargo.toml
runtime/solo/src/: consts.rs  gov.rs  impls.rs  lib.rs  mock.rs  tests.rs  types.rs
(+97 files in other folders)
