[workspace.package]
authors    = [ "Ajuna Network <https://github.com/ajuna-network>" ]
edition    = "2021"
homepage   = "https://ajuna.io"
repository = "https://github.com/ajuna-network/Ajuna"
version    = "0.1.22"

[profile.release]
panic = "unwind"

[workspace]
members = [
    "node",
    "rpc",
    "runtime/*",
    "pallets/*",
    "pallets/ajuna-awesome-avatars/benchmarking",
    "pallets/ajuna-nft-staking/benchmarking",
    "primitives",
]
