[package]
edition = "2021"
name    = "ajuna-common"
version = "0.1.1"

[dependencies]
codec      = { default-features = false, features = [ "derive", "max-encoded-len" ], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { default-features = false, features = [ "derive" ], version = "2.1" }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[features]
default = [ 'std' ]
std = [
    'sp-std/std',
    'codec/std',
    'scale-info/std',
    'frame-support/std',
]
