[package]
name = "ajuna-test"
version = "0.1.0"
edition = "2021"

[dependencies]
ajuna-solo-runtime = { path = "../runtime/solo", default-features = false }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
pallet-ajuna-board = { path = "../pallets/ajuna-board", default-features = false }
ajuna-common = { default-features = false, path = "../ajuna-common" }
codec = { default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { default-features = false, features = ["derive"], version = "2.1" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
pallet-membership = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[features]
default = ["std"]
std = [
    'ajuna-solo-runtime/std',
    'frame-support/std',
    'sp-runtime/std',
    'frame-system/std',
    'pallet-ajuna-board/std',
]