[package]
authors    = [ "Ajuna Network <https://github.com/ajuna-network>" ]
edition    = "2021"
homepage   = "https://ajuna.io"
name       = "ajuna-node"
repository = "https://github.com/ajuna-network/Ajuna"
version    = "0.1.10"

[[bin]]
name              = "ajuna-solo"
path              = "src/solo.rs"
required-features = [ "solo" ]

[[bin]]
name              = "bajun-para"
path              = "src/bajun.rs"
required-features = [ "bajun" ]

[[bin]]
name              = "ajuna-para"
path              = "src/ajuna.rs"
required-features = [ "ajuna" ]

[dependencies]
ajuna-cli     = { path = "cli" }
ajuna-service = { path = "service" }

[features]
default = [ "solo" ]

ajuna = [ "ajuna-cli/ajuna", "ajuna-service/ajuna" ]
bajun = [ "ajuna-cli/bajun", "ajuna-service/bajun" ]
solo  = [ "ajuna-cli/solo", "ajuna-service/solo" ]

kusama-native   = [ "ajuna-cli/kusama-native", "ajuna-service/kusama-native" ]
polkadot-native = [ "ajuna-cli/polkadot-native", "ajuna-service/polkadot-native" ]
rococo-native   = [ "ajuna-cli/rococo-native", "ajuna-service/rococo-native" ]
