[package]
authors    = [ "Ajuna Network <https://github.com/ajuna-network>" ]
edition    = "2021"
homepage   = "https://ajuna.io"
name       = "ajuna-primitives"
repository = "https://github.com/ajuna-network/Ajuna"
version    = "0.1.7"

[dependencies]
sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = [ "std" ]
std = [
    "sp-core/std",
    "sp-runtime/std",
]
