[package]
name = "ajuna-primitives"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[dependencies]
sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

[features]
default = [ "std" ]
std = [
    "sp-core/std",
    "sp-runtime/std",
]
