[package]
name = "ajuna-rpc"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[dependencies]
ajuna-primitives = { path = "../primitives" }

jsonrpsee = { version = "0.16.2", features = [ "server" ] }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-client-api                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-rpc-api                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-transaction-pool-api        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-blockchain                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
