[package]
name = "ajuna-rpc"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[dependencies]
# General
jsonrpsee = { workspace = true, features = [ "server" ] }

# Substrate
pallet-transaction-payment-rpc = { workspace = true }
sc-client-api                  = { workspace = true }
sc-rpc                         = { workspace = true }
sc-rpc-api                     = { workspace = true }
sc-transaction-pool-api        = { workspace = true }
sp-api                         = { workspace = true }
sp-block-builder               = { workspace = true }
sp-blockchain                  = { workspace = true }
substrate-frame-rpc-system     = { workspace = true }

# Ajuna
ajuna-primitives = { workspace = true }
